[BE] feat: 채팅내역 조회 매니저, 팬 구분 (#122)